Minor layout bugfix and content-type addition

--- a/public/stylesheets/sass/custom.scss
+++ b/public/stylesheets/sass/custom.scss
@@ -65,6 +65,7 @@ h1, h2, h3 {
 
 #header_cont {
   position:fixed;
+  z-index: 5;
 	width:100%;
   height:40px;
   margin: 0;
